<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MedicationEditActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editMedicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_medication"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />

        <CalendarView
            android:id="@+id/editDateStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editDoseFreq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editDoseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dose_unit_mg" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dose_unit_mcg" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dose_unit_drop" />
        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/medication_edit_submit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>